# duckdb-extension-boilerplate

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: LinuxRelease.yml  MacOS.yml  NodeJS.yml  Python.yml  Windows.yml
scripts/: extension-upload.sh  set_extension_name.py
src/: CMakeLists.txt  boilerplate_extension.cpp
src/include/: boilerplate_extension.hpp
test/nodejs/: boilerplate_test.js
test/sql/: boilerplate.test
